@startuml

package budgetflow.command {
    class DeleteIncomeCommand {
        # String input
        # CommandType commandType
        # String outputMessage
        + DeleteIncomeCommand(String input)
        + execute(List<Income> incomes, ExpenseList expenseList) throws UnfoundIncomeException
    }
}

package budgetflow.exception {
    class UnfoundIncomeException
}

package budgetflow.expense {
    class ExpenseList
}

package budgetflow.income {
    class Income {
        + String getCategory()
    }
}

class Command {
    + Command(String input)
    + CommandType commandType
}

DeleteIncomeCommand --|> Command
DeleteIncomeCommand ..> UnfoundIncomeException : throws
DeleteIncomeCommand ..> Income : uses
DeleteIncomeCommand ..> ExpenseList : uses

@enduml